singularity updates. WIP.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,17 @@
-*.iml
-
-.idea
-
+*.orig
 target
+.DS_Store
+.classpath
+.settings
+target-eclipse
+.project
+.pydevproject
+bin
+*~
+JavaConsole.java
+*.iml
+.idea
+*.pyc
+__pycache__
+ContactsHadoopTasks/kir/
+Docs/_build
