--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,19 @@
             <artifactId>mesos</artifactId>
             <version>${mesos.version}</version>
         </dependency>
-
+        
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-recipes</artifactId>
+            <version>2.2.0-incubating</version>
+            <exclusions>
+              <exclusion>
+                <artifactId>slf4j-log4j12</artifactId>
+                <groupId>org.slf4j</groupId>
+              </exclusion>
+            </exclusions>
+        </dependency>
+        
     </dependencies>
 
     <build>
