--- a/singularity.yml
+++ b/singularity.yml
@@ -1,6 +1,9 @@
 server:
   type: simple
   applicationContextPath: /singularity/v1
+  connector: 
+    type: http
+    port: 8080
 
 mesos:
   master: zk://localhost:2181/mesos/sprocket
