--- a/singularity.yml
+++ b/singularity.yml
@@ -3,7 +3,7 @@ server:
   applicationContextPath: /singularity/v1
   connector: 
     type: http
-    port: 8080
+    port: 6000
 
 mesos:
   master: zk://localhost:2181/mesos/sprocket
@@ -20,3 +20,13 @@ zookeeper:
   connectTimeoutMillis: 5000
   retryBaseSleepTimeMilliseconds: 1000
   retryMaxTries: 3
+  
+database:
+  driverClass: com.mysql.jdbc.Driver
+  user: root
+  password: 
+  url: jdbc:mysql://localhost/singularity
+
+
+  
+  
