--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,7 @@
 
   <groupId>com.hubspot</groupId>
   <artifactId>Singularity</artifactId>
-  <version>${singularity.version}-SNAPSHOT</version>
-  <name>Mesos scheduler for applications, tasks, cron jobs.</name>
+  <version>0.1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <repositories>
@@ -37,6 +36,23 @@
     <module>SingularityService</module>
   </modules>
 
+  <scm>
+           <connection>scm:git:git@github.com:HubSpot/Singularity.git</connection>
+           <developerConnection>scm:git:git@github.com:HubSpot/Singularity.git</developerConnection>
+           <url>git@github.com:HubSpot/Singularity.git</url>
+       </scm>
+
+       <developers>
+           <developer>
+               <name>Whitney Sorenson</name>
+               <email>wsorenson@gmail.com</email>
+           </developer>
+                   <developer>
+                       <name>Tom Petr</name>
+                       <email>tpetr@hubspot.com</email>
+                   </developer>
+       </developers>
+       
   <build>
     <plugins>
       <plugin>
