--- a/SingularityBase/pom.xml
+++ b/SingularityBase/pom.xml
@@ -25,7 +25,7 @@
     <dependency>
       <groupId>com.hubspot.jackson</groupId>
       <artifactId>jackson-datatype-protobuf</artifactId>
-      <version>0.1.0-SNAPSHOT</version>
+      <version>0.1.0</version>
     </dependency>
 
     <dependency>
