--- a/SingularityBase/pom.xml
+++ b/SingularityBase/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>com.hubspot</groupId>
     <artifactId>Singularity</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>${singularity.version}-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
