--- a/SingularityBase/pom.xml
+++ b/SingularityBase/pom.xml
@@ -3,14 +3,24 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
+  <prerequisites>
+    <maven>3.0.0</maven>
+  </prerequisites>
+
   <parent>
-    <groupId>com.hubspot</groupId>
-    <artifactId>Singularity</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
-    <relativePath>../pom.xml</relativePath>
+    <groupId>org.sonatype.oss</groupId>
+    <artifactId>oss-parent</artifactId>
+    <version>7</version>
   </parent>
 
+  <properties>
+    <mesos.version>0.14.0</mesos.version>
+    <java.abi>1.7</java.abi>
+  </properties>
+
+  <groupId>com.hubspot</groupId>
   <artifactId>SingularityBase</artifactId>
+  <version>0.1.0-SNAPSHOT</version>
 
   <repositories>
     <repository>
@@ -19,6 +29,65 @@
       <url>http://oss.sonatype.org/content/repositories/snapshots</url>
     </repository>
   </repositories>
+
+  <scm>
+    <connection>scm:git:git@github.com:HubSpot/Singularity.git</connection>
+    <developerConnection>scm:git:git@github.com:HubSpot/Singularity.git</developerConnection>
+    <url>git@github.com:HubSpot/Singularity.git</url>
+  </scm>
+
+  <developers>
+    <developer>
+      <name>Whitney Sorenson</name>
+      <email>wsorenson@gmail.com</email>
+    </developer>
+    <developer>
+      <name>Tom Petr</name>
+      <email>tpetr@hubspot.com</email>
+    </developer>
+  </developers>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>2.5</version>
+        <configuration>
+          <!-- http://maven.apache.org/plugins/maven-compiler-plugin/ -->
+          <source>${java.abi}</source>
+          <target>${java.abi}</target>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+        <version>2.2.1</version>
+        <executions>
+          <execution>
+            <id>attach-sources</id>
+            <goals>
+              <goal>jar-no-fork</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>2.9</version>
+        <executions>
+          <execution>
+            <id>generate-javadoc-jar</id>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
+
 
   <dependencies>
 
