--- a/pom.xml
+++ b/pom.xml
@@ -13,14 +13,13 @@
   </parent>
 
   <properties>
-    <singularity.version>0.1.0</singularity.version>
     <mesos.version>0.14.0</mesos.version>
     <java.abi>1.7</java.abi>
   </properties>
 
   <groupId>com.hubspot</groupId>
   <artifactId>Singularity</artifactId>
-  <version>0.1.0-SNAPSHOT</version>
+  <version>0.1.1</version>
   <packaging>pom</packaging>
 
   <repositories>
@@ -51,6 +50,12 @@
       <email>tpetr@hubspot.com</email>
     </developer>
   </developers>
+
+  <modules>
+  <module>SingularityBase</module>
+  <module>SingularityClient</module>
+  <module>SingularityService</module>
+  </modules>
 
   <build>
     <plugins>
