some work for singularity client.

--- a/SingularityClient/pom.xml
+++ b/SingularityClient/pom.xml
@@ -28,6 +28,18 @@
       <version>0.1.1</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.ning</groupId>
+      <artifactId>async-http-client</artifactId>
+      <version>1.7.20</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.google.inject</groupId>
+      <artifactId>guice</artifactId>
+      <version>3.0</version>
+    </dependency>
+
   </dependencies>
 
 </project>
