add logging section

--- a/SingularityService/singularity.yml
+++ b/SingularityService/singularity.yml
@@ -27,6 +27,9 @@ database:
   password: 
   url: jdbc:mysql://localhost/singularity
 
+logging:
 
-  
-  
+  loggers:
+
+    "com.hubspot.singularity.mesos" : INFO 
+
