fix imports in response to dropwizard-guice changes

--- a/SingularityService/pom.xml
+++ b/SingularityService/pom.xml
@@ -39,7 +39,7 @@
     </dependency>
 
     <dependency>
-      <groupId>com.codahale.dropwizard</groupId>
+      <groupId>io.dropwizard</groupId>
       <artifactId>dropwizard-jdbi</artifactId>
       <version>0.7.0-SNAPSHOT</version>
     </dependency>
