--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ local_singularity.yml
 Docs/_build
 SingularityUI/node_modules/*
 SingularityUI/brunchlog
+SingularityService/src/main/resources/static
