--- a/SingularityBase/pom.xml
+++ b/SingularityBase/pom.xml
@@ -9,7 +9,7 @@
   <parent>
     <groupId>com.hubspot</groupId>
     <artifactId>Singularity</artifactId>
-    <version>0.1.5</version>
+    <version>pendingRequestId</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
