.gitignore env.coffee

--- a/.gitignore
+++ b/.gitignore
@@ -17,4 +17,5 @@ local_singularity.yml
 Docs/_build
 SingularityUI/node_modules/*
 SingularityUI/brunchlog
+SingularityUI/app/env.coffee
 SingularityService/src/main/resources/static
