--- a/SingularityUI/package.json
+++ b/SingularityUI/package.json
@@ -18,10 +18,10 @@
         "javascript-brunch": ">= 1.0 < 1.8",
         "coffee-script-brunch": ">= 1.0 < 1.8",
 
+        "handlebars-brunch": "git+ssh://git@github.com:HubSpot/handlebars-brunch.git",
+
         "css-brunch": ">= 1.0 < 1.8",
         "stylus-brunch": ">= 1.0 < 1.8",
-
-        "handlebars-brunch": ">= 1.0 < 1.8",
 
         "uglify-js-brunch": ">= 1.0 < 1.8",
         "clean-css-brunch": ">= 1.0 < 1.8"
