--- a/SingularityClient/pom.xml
+++ b/SingularityClient/pom.xml
@@ -52,6 +52,12 @@
       </exclusions>
     </dependency>
 
+      <dependency>
+          <groupId>com.fasterxml.jackson.datatype</groupId>
+          <artifactId>jackson-datatype-guava</artifactId>
+          <version>2.2.3</version>
+      </dependency>
+
 
   </dependencies>
 
