Upgrade mixen to 0.5.3

--- a/SingularityUI/package.json
+++ b/SingularityUI/package.json
@@ -1,6 +1,6 @@
 {
     "author": "Adam Schwartz",
-    "name": "SingularityUI",
+    "name": "singularityui",
     "description": "UI for Singularity deploy API",
     "version": "0.0.1",
     "homepage": "",
