less intrusive sentry appender

--- a/SingularityService/singularity.yml
+++ b/SingularityService/singularity.yml
@@ -34,6 +34,6 @@ logging:
     "com.hubspot.singularity" : TRACE
 
 sentry:
-  dsn: "getsentry://<publickey>:<privatekey>@app.getsentry.com/<id>"
+  # dsn:  "getsentry://<publickey>:<privatekey>@app.getsentry.com/<id>"
 
 appRoot: /v1
