--- a/SingularityService/pom.xml
+++ b/SingularityService/pom.xml
@@ -34,6 +34,19 @@
 
     <dependency>
       <groupId>com.hubspot</groupId>
+      <artifactId>HubSpotConnect</artifactId>
+      <version>2.0-SNAPSHOT</version>
+      <exclusions>
+        <exclusion>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-databind</artifactId>
+        </exclusion>
+      </exclusions>      
+    </dependency>
+
+
+    <dependency>
+      <groupId>com.hubspot</groupId>
       <artifactId>SingularityBase</artifactId>
       <version>0.2.17</version>
     </dependency>
