ignore this bro

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ JavaConsole.java
 *.pyc
 __pycache__
 local_singularity.yml
+qa_singularity.yml
 Docs/_build
 SingularityUI/node_modules/*
 SingularityUI/brunchlog
