--- a/SingularityService/pom.xml
+++ b/SingularityService/pom.xml
@@ -63,6 +63,12 @@
     </dependency>
 
     <dependency>
+      <groupId>com.hubspot.jackson</groupId>
+      <artifactId>jackson-jaxrs-propertyfiltering</artifactId>
+      <version>0.2.0</version>
+    </dependency>
+
+    <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
       <version>5.1.26</version>
