--- a/SingularityService/pom.xml
+++ b/SingularityService/pom.xml
@@ -33,6 +33,13 @@
     </dependency>
 
     <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>  
+      <version>1.9.5</version> 
+    </dependency>
+
+
+    <dependency>
       <groupId>com.hubspot</groupId>
       <artifactId>SingularityBase</artifactId>
       <version>0.2.20</version>
