also discriminate by mesos version

--- a/SingularityService/pom.xml
+++ b/SingularityService/pom.xml
@@ -25,7 +25,6 @@
 	</repositories>
 
 	<dependencies>
-
 		<dependency>
 			<groupId>de.neuland-bfi</groupId>
 			<artifactId>jade4j</artifactId>
@@ -208,6 +207,23 @@
 				</configuration>
 			</plugin>
 		</plugins>
+        <resources>
+            <!-- version.properties will allow us to get the value of mesos.version at runtime -->
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+                <includes>
+                    <include>**/version.properties</include>
+                </includes>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>false</filtering>
+                <excludes>
+                    <exclude>**/version.properties</exclude>
+                </excludes>
+            </resource>
+        </resources>
 	</build>
 
 </project>
