vagrant for singularity deps

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@ SingularityUI/node_modules/*
 SingularityUI/brunchlog
 SingularityUI/app/env.coffee
 SingularityService/src/main/resources/static
+
+.vagrant
