loads of changes related to Zk/MySQL

--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,8 @@
     <dropwizard.version>0.7.0-rc2</dropwizard.version>
     <sl4fj.version>1.7.6</sl4fj.version>
     <jackson.version>2.3.1</jackson.version>
-    <curator.version>2.2.0-incubating</curator.version>
-    <ning.async.version>1.7.20</ning.async.version>
+    <curator.version>2.4.1</curator.version>
+    <ning.async.version>1.7.24</ning.async.version>
   </properties>
 
   <groupId>com.hubspot</groupId>
