--- a/SingularityBase/pom.xml
+++ b/SingularityBase/pom.xml
@@ -37,6 +37,12 @@
       <artifactId>mesos</artifactId>
       <version>${mesos.version}</version>
     </dependency>
+    
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.3.2</version>
+    </dependency>
 
   </dependencies>
 
