java executor. works.

--- a/SingularityExecutor/src/main/resources/deploy.env
+++ b/SingularityExecutor/src/main/resources/deploy.env
@@ -1,4 +1,9 @@
 # mesos task env
-{{#executorData.env.entrySet}}
-export {{key}={{value}}
-{{/executorData.env.entrySet}}
+{{#executorDataEnv}}
+export {{key}}={{value}}
+{{/executorDataEnv}}
+
+# deploy config env
+{{#deployConfigEnv}}
+export {{key}}={{value}}
+{{/deployConfigEnv}}
