expose port(s) as environment variables

--- a/SingularityExecutor/src/main/resources/deploy.env
+++ b/SingularityExecutor/src/main/resources/deploy.env
@@ -2,3 +2,11 @@
 {{#executorDataEnv}}
 export {{key}}={{value}}
 {{/executorDataEnv}}
+
+# mesos task ports
+{{#portsEnv}}
+export PORT{{key}}={{value}}
+{{/portsEnv}}
+{{^portsEnv}}
+# (no ports)
+{{/portsEnv}}
