--- a/SingularityExecutor/src/main/resources/deploy.env
+++ b/SingularityExecutor/src/main/resources/deploy.env
@@ -1,11 +1,11 @@
 # mesos task env
 {{#executorDataEnv}}
-export {{key}}={{value}}
+export {{{key}}}={{{value}}}
 {{/executorDataEnv}}
 
 # mesos task ports
 {{#portsEnv}}
-export PORT{{key}}={{value}}
+export PORT{{{key}}}={{{value}}}
 {{/portsEnv}}
 {{^portsEnv}}
 # (no ports)
