use ENV from mesos.

--- a/SingularityExecutor/src/main/resources/deploy.env
+++ b/SingularityExecutor/src/main/resources/deploy.env
@@ -1,12 +1,4 @@
 # mesos task env
-{{#executorDataEnv}}
-export {{{key}}}={{{value}}}
-{{/executorDataEnv}}
-
-# mesos task ports
-{{#portsEnv}}
-export PORT{{{key}}}={{{value}}}
-{{/portsEnv}}
-{{^portsEnv}}
-# (no ports)
-{{/portsEnv}}
+{{#env}}
+export {{{name}}}={{{value}}}
+{{/env}}
