--- a/SingularityLogWatcher/src/main/resources/logrotate.template
+++ b/SingularityLogWatcher/src/main/resources/logrotate.template
@@ -1,12 +1,14 @@
 {{{ logfile }}} 
 
 {
-  olddir {{{ olddir }}}
+  dateext
+  dateformat {{{ rotateDateformat }}}
+  olddir {{{ rotateDirectory }}}
   compress
   copytruncate
   nomail
   nosharedscripts
-  rotate 10000
-  dateext
+  rotate {{{ rotateCount }}}
+  maxage {{{ maxageDays }}}
   notifempty
 }
