work for s3 uploader

--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,7 @@
     <module>SingularityService</module>
     <module>SingularityExecutor</module>
     <module>SingularityLogWatcher</module>
+    <module>SingularityS3Uploader</module>
   </modules>
 
   <build>
