make s3 uploader separate from log watcher..

--- a/SingularityExecutor/pom.xml
+++ b/SingularityExecutor/pom.xml
@@ -32,6 +32,12 @@
       <version>0.3.3</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.github.spullara.mustache.java</groupId>
+      <artifactId>compiler</artifactId>
+      <version>0.8.13</version>
+    </dependency>
+
   </dependencies>
 
   <build>
