--- a/SingularityExecutor/pom.xml
+++ b/SingularityExecutor/pom.xml
@@ -36,6 +36,12 @@
       <groupId>com.github.spullara.mustache.java</groupId>
       <artifactId>compiler</artifactId>
       <version>0.8.13</version>
+      <exclusions>
+        <exclusion>
+          <groupId>com.google.guav</groupId>
+          <artifactId>guava</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
   </dependencies>
