make sure logs are rotated daily.

--- a/SingularityExecutor/src/main/resources/logrotate.template
+++ b/SingularityExecutor/src/main/resources/logrotate.template
@@ -5,6 +5,7 @@
   dateformat {{{ rotateDateformat }}}
   olddir {{{ rotateDirectory }}}
   compress
+  daily
   copytruncate
   nomail
   nosharedscripts
