--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ local_singularity.yml
 qa_singularity.yml
 Docs/_build
 SingularityUI/node_modules/*
+SingularityUI/bower_components/*
 SingularityUI/brunchlog
 SingularityUI/app/env.coffee
 SingularityService/src/main/resources/static
