--- a/SingularityUI/package.json
+++ b/SingularityUI/package.json
@@ -17,6 +17,7 @@
     "handlebars-brunch": "git+https://git@github.com/HubSpot/handlebars-brunch.git",
     "javascript-brunch": ">= 1.0 < 1.8",
     "less-brunch": "^1.7.2",
+    "sass-brunch": "^1.8.1",
     "stylus-brunch": ">= 1.0 < 1.8",
     "uglify-js-brunch": ">= 1.0 < 1.8"
   },
