--- a/SingularityExecutorCleanup/pom.xml
+++ b/SingularityExecutorCleanup/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>com.hubspot</groupId>
     <artifactId>Singularity</artifactId>
-    <version>0.3.7-SNAPSHOT</version>
+    <version>0.3.8-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
@@ -29,7 +29,7 @@
     <dependency>
       <groupId>com.hubspot</groupId>
       <artifactId>SingularityExecutor</artifactId>
-      <version>0.3.7-SNAPSHOT</version>
+      <version>${singularity.version}</version>
     </dependency>
     
     <dependency>
